--- a/.github/workflows/prod.workflow.yml
+++ b/.github/workflows/prod.workflow.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Deploy to App Service
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'fastapi-cd'
+        app-name: 'fastapi-cd-haresh'
         images: 'fastapicdharesh.azurecr.io/fastapi-cd-haresh:${{ github.sha }}'
         slot-name: 'PRODUCTION'
 
